[package]
name = "neoercities"
version = "0.1.0"
edition = "2021"
authors = ["amber lastname"]
license = "MIT"
repository = "https://github.com/ambyshframber/neoercities"
description = "another neocities API wrapper"
categories = ["api-bindings"]
tags = ["api", "neocities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "multipart"] }
thiserror = "1.0.30"
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0.59", optional = true }
sha-1 = { version = "0.10.0", optional = true }

[dev-dependencies]
chrono = "0.4"

[features]
default = []

site_info = ["serde_json", "sha-1", "chrono"]
